edition = "2023";

package protocol;

option go_package = "internal/common/protocol/proto";

message StoreRequest {
  string id = 1;
  string metadata = 2;
  bytes data = 3;
}

message StoreResponse {
  string error = 1;
}

message LoadRequest {
  string id = 1;
}

message LoadResponse {
  string error = 1;
  string metadata = 2;
  bytes data = 3;
}

service Storage {
  rpc Store(StoreRequest) returns (StoreResponse);
  rpc Load(LoadRequest) returns (LoadResponse);
}
